Fix logo text showing on mobile breakpoint

--- a/angular/src/app/features/header/header.component.css
+++ b/angular/src/app/features/header/header.component.css
@@ -151,12 +151,8 @@
 }
 
 @media (max-width: 36rem) {
-  .logo-holder {
-    .logo {
-      span {
-        display: none;
-      }
-    }
+  :host(.flat) .logo-holder .logo span {
+    display: none;
   }
 
   .nav-container {
